Please squash this commit in the pull request

--- a/docs/_includes/events.html
+++ b/docs/_includes/events.html
@@ -1,5 +1,5 @@
 {% assign global_js = global_js | append: ",js_events" %}
-<div class="js-template-hidden">
+<div class="/js-template-hidden">
   <div class="template-your-timezone-is">
     <div>{% assign l="fr" %}{% assign o="Your timezone is" %}{% include t.html %}<span class="your-timezone-is"></span></div>
   </div>
