--- a/docs/css/assets.css
+++ b/docs/css/assets.css
@@ -2,7 +2,7 @@
 /*--------------------------------------------------
 	Ajax Page Transition
 ---------------------------------------------------*/
-	
+
 	main{
 		overflow:hidden
 	}
@@ -72,11 +72,11 @@
 		-moz-transition:opacity .3s 0s,visibility 0s 0s;
 		transition:opacity .3s .3s,visibility 0s 0s
 	}
- 
+
 
 /*--------------------------------------------------
 	Flex Nav
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.flexnav,.flexnav li ul{
 		width:100%;
@@ -323,7 +323,7 @@
 
 /*--------------------------------------------------
 	Swiper Slider
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.swiper-container {
 	  margin: 0 auto;
@@ -851,7 +851,7 @@
 	  100% {
 		-webkit-transform: rotate(360deg);
 	  }
-	
+
 	}
 	@keyframes swiper-preloader-spin {
 	  100% {
@@ -863,7 +863,7 @@
 
 /*--------------------------------------------------
 	Owl Carousel
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.owl-carousel,.owl-carousel .owl-item{
 		-webkit-tap-highlight-color:transparent;
@@ -995,7 +995,7 @@
 		top:50%;
 		margin-left:-40px;
 		margin-top:-40px;
-		background:url(owl.video.play.png) no-repeat;
+		background:url(/images/owl.video.play.png) no-repeat;
 		cursor:pointer;
 		z-index:1;
 		-webkit-backface-visibility:hidden;
@@ -1026,7 +1026,7 @@
 
 /*--------------------------------------------------
 	Magnific Popup
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.mfp-bg,.mfp-wrap{
 		position:fixed;
@@ -1392,10 +1392,10 @@
 		}
 	}
 
-	
+
 /*--------------------------------------------------
 	Tool Tips
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	[data-tooltip]{
 		position:relative
@@ -1475,7 +1475,7 @@
 
 /*--------------------------------------------------
 	Social Share
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.jssocials-shares{
 		margin:.2em 0
@@ -1543,7 +1543,7 @@
 
 /*--------------------------------------------------
 	Justified Galler
----------------------------------------------------*/	
+---------------------------------------------------*/
 
 	.justified-gallery{
 		width:100%;
