--- a/docs/_includes/project.html
+++ b/docs/_includes/project.html
@@ -235,7 +235,7 @@
                         <a class=
                         "main-title next-ajax-link-project hide-ball"
                         data-type="page-transition" href=
-                        "/project02.html">EVEREST</a>
+                        "#">EVEREST</a>
                       </div>
                       <div class="next-subtitle-name">
                         Design
