Please squash this commit in the pull request

--- a/docs/_includes/project.html
+++ b/docs/_includes/project.html
@@ -75,18 +75,18 @@
                           </li>
                           <li>
                             <a class="ajax-link" href=
-                            "/carousel.html" data-type=
+                            "#" data-type=
                             "page-transition">Large Carousel</a>
                           </li>
                           <li>
                             <a class="ajax-link" href=
-                            "/portfolio.html" data-type=
+                            "#" data-type=
                             "page-transition">Creative
                             Portfolio</a>
                           </li>
                           <li>
                             <a class="ajax-link" href=
-                            "/index-classic.html" data-type=
+                            "#" data-type=
                             "page-transition">Classic Menu</a>
                           </li>
                         </ul>
@@ -94,13 +94,13 @@
                       <li class="link menu-timeline">
                         <a class="ajax-link" data-type=
                         "page-transition" href=
-                        "/about.html"><span data-hover=
+                        "#"><span data-hover=
                         "About">About</span></a>
                       </li>
                       <li class="link menu-timeline">
                         <a class="ajax-link" data-type=
                         "page-transition" href=
-                        "/contact.html"><span data-hover=
+                        "#"><span data-hover=
                         "Contact">Contact</span></a>
                       </li>
                       <li class="link menu-timeline buy-item">
