--- a/docs/_includes/project.html
+++ b/docs/_includes/project.html
@@ -21,9 +21,9 @@
   <meta name="description" content=
   "Download the best Creative Portfolio HTML Template in 2018">
   <meta name="author" content="ClaPat Studio">
-  <link rel="icon" type="image/ico" href="favicon.ico">
-  <link href="style.css" rel="stylesheet">
-  <link href="css/font-awesome.min.css" rel="stylesheet">
+  <link rel="icon" type="image/ico" href="/favicon.ico">
+  <link href="/style.css" rel="stylesheet">
+  <link href="/css/font-awesome.min.css" rel="stylesheet">
   <link href=
   "https://fonts.googleapis.com/css?family=Poppins:300,400,600,700"
   rel="stylesheet">
@@ -54,8 +54,8 @@
             <div id="logo" class="hide-ball">
               <a class="ajax-link" data-type="page-transition"
               href="/"><img class="black-logo" src=
-              "images/logo.png" alt="ClaPat Logo"> <img class=
-              "white-logo" src="images/logo-white.png" alt=
+              "/images/logo.png" alt="ClaPat Logo"> <img class=
+              "white-logo" src="/images/logo-white.png" alt=
               "ClaPat Logo"></a>
             </div><!--/Logo -->
             <!-- Navigation -->
@@ -75,18 +75,18 @@
                           </li>
                           <li>
                             <a class="ajax-link" href=
-                            "carousel.html" data-type=
+                            "#" data-type=
                             "page-transition">Large Carousel</a>
                           </li>
                           <li>
                             <a class="ajax-link" href=
-                            "portfolio.html" data-type=
+                            "#" data-type=
                             "page-transition">Creative
                             Portfolio</a>
                           </li>
                           <li>
                             <a class="ajax-link" href=
-                            "index-classic.html" data-type=
+                            "#" data-type=
                             "page-transition">Classic Menu</a>
                           </li>
                         </ul>
@@ -94,13 +94,13 @@
                       <li class="link menu-timeline">
                         <a class="ajax-link" data-type=
                         "page-transition" href=
-                        "about.html"><span data-hover=
+                        "#"><span data-hover=
                         "About">About</span></a>
                       </li>
                       <li class="link menu-timeline">
                         <a class="ajax-link" data-type=
                         "page-transition" href=
-                        "contact.html"><span data-hover=
+                        "#"><span data-hover=
                         "Contact">Contact</span></a>
                       </li>
                       <li class="link menu-timeline buy-item">
@@ -189,7 +189,7 @@
                 <!-- Row -->
                 <div class="vc_row full">
                   <figure class="has-animation has-parallax">
-                    <img src="images/projects/sn01.jpg" alt=
+                    <img src="/images/projects/sn01.jpg" alt=
                     "Image Title">
                     <figcaption>
                       Image Caption
@@ -203,13 +203,13 @@
                     <h2 class="has-mask">&gt; &gt;</h2>
                   </div>
                   <div class="two_third last">
-                    <p class="has-animation">{{ content | markdownify }}</p>
+                    <div class="has-animation">{{ content | markdownify }}</div>
                   </div>
                 </div><!--/Row -->
                 <!-- Row -->
                 <div class="vc_row">
                   <figure class="has-animation">
-                    <img src="images/projects/sn02.jpg" alt=
+                    <img src="/images/projects/sn02.jpg" alt=
                     "Image Title">
                     <figcaption>
                       Image Caption
@@ -222,7 +222,7 @@
                 <div class="next-project-wrap">
                   <div class="next-project-image">
                     <div class="next-project-image-bg" style=
-                    "background-image:url(images/02hero.jpg)">
+                    "background-image:url(/images/02hero.jpg)">
                     </div>
                   </div>
                   <div class="next-project-title">
@@ -235,7 +235,7 @@
                         <a class=
                         "main-title next-ajax-link-project hide-ball"
                         data-type="page-transition" href=
-                        "project02.html">EVEREST</a>
+                        "#">EVEREST</a>
                       </div>
                       <div class="next-subtitle-name">
                         Design
@@ -304,20 +304,6 @@
   </div>
   <div id="clone-image"></div>
   <div id="rotate-device"></div>
-  <script src="js/jquery.min.js"></script>
-  <script src=
-  "https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/ScrollMagic.min.js"></script>
-
-  <script src=
-  "https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/debug.addIndicators.min.js"></script>
-
-  <script src=
-  "https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.5/plugins/animation.gsap.min.js"></script>
-
-  <script type="text/javascript" src=
-  "https://maps.googleapis.com/maps/api/js?key=AIzaSyCpK1sWi3J3EbUOkF_K4-UHzi285HyFX5M&amp;sensor=false"></script>
-
-  <script src="js/plugins.js"></script>
-  <script src="js/scripts.js"></script>
+  {% include load_js_files.html %}
 </body>
 </html>
