rendre le résumé modifiable

--- a/docs/_includes/netlifycms_projet.html
+++ b/docs/_includes/netlifycms_projet.html
@@ -9,6 +9,7 @@
         name: "img"
         widget: "image"
         required: false
+      - { label: 'Résumé', name: 'resume', widget: 'string' }
       - { label: 'Contenu', name: 'body', widget: 'markdown' }
       - { label: 'Mise en page', name: 'layout', widget: 'hidden', default: 'project' }
       - { label: 'Ordre', name: 'ordre', widget: 'number', required: false }
