--- a/docs/_includes/project.html
+++ b/docs/_includes/project.html
@@ -180,10 +180,7 @@
                     Content</h6>
                   </div>
                   <div class="two_third last">
-                    <h3 class="has-mask">We strive to grab new
-                    possibilities, not to stutter or trip, but to
-                    walk with determination, to walk with
-                    passion.</h3>
+                    <h3 class="has-mask">{{ page.resume }}</h3>
                   </div>
                 </div><!--/Row -->
                 <!-- Row -->
